# Phoenix-Protocol

./: Cargo.toml  README.md
filecoin-service/: README.md  bun.lockb  index.ts  package.json  storacha-client.ts  storage-service.ts
src/: lib.rs  main.rs
src/crypto/: message.rs  mod.rs  threshold.rs
src/filecoin/: client.rs  mod.rs  storage.rs  types.rs
src/mesh/: node.rs
