[package]
name = "phoenix-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = [
    "tcp",
    "dns",
    "noise",
    "mdns",
    "yamux",
    "ping",
    "identify",
    "macros",
    "gossipsub",
    "tokio"
]}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"