[package]
name = "phoenix-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = [
    "tcp",
    "dns",
    "noise",
    "mdns",
    "yamux",
    "ping",
    "identify",
    "macros",
    "gossipsub",
    "tokio"
]}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
threshold_crypto = { version = "0.4", git = "https://github.com/poanetwork/threshold_crypto" }
rand = { version = "0.7"}
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
ipfs-api-backend-hyper = "0.6"
cid = "0.10"
multihash = "0.19"